--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,4 +1,3 @@
-<p>persona works!</p>
 <!DOCTYPE html>
 <html
         lang="en"
@@ -28,7 +27,7 @@
             <div class="col-sm-12 text-right">
                 <div class="form-group box-main-btn">
                     <span style="display: block; height: 30px"></span>
-                    <a class="btn btn-success" href="#" th:href="@{/persona-web/agregar-persona}">Nuevo</a>
+                    <a class="btn btn-success" href="/form-persona">Nuevo</a>
                 </div>
             </div>
         </div>
@@ -53,9 +52,9 @@
                             <td>{{persona.apellidoMaterno}}</td>
                             <td>{{persona.edad}}</td>
                             <td>
-                                <a class="btn btn-info" th:href="@{/persona-web/modificar/{id}(id=${persona.id})}">
+                                <a class="btn btn-info" [routerLink]="['/edit/', persona.id]" >
                                     Modificar </a>
-                                <a class="btn btn-warning" th:href="@{/persona-web/eliminar/{id}(id=${persona.id})}">
+                                <a class="btn btn-warning" (click)="delete(persona.id); get()">
                                     Eliminar </a>
                             </td>
                         </tr>
